[package]
name = "du-dust"
description = "A more intuitive version of du"
version = "1.1.1"
authors = ["bootandy <bootandy@gmail.com>", "nebkor <code@ardent.nebcorp.com>"]
edition = "2021"
readme = "README.md"

documentation = "https://github.com/bootandy/dust"
homepage = "https://github.com/bootandy/dust"
repository = "https://github.com/bootandy/dust"

keywords = ["du", "command-line", "disk", "disk-usage"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "https://travis-ci.org/bootandy/dust" }

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
clap = "4.5.21"
config-file = "0.2.3"
ctrlc = "3.4.5"
directories = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
